// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SelfHostedSetupUser.vue > shows error on failed signup 1`] = `
"<div class="v-alert v-theme--light bg-error v-alert--density-default v-alert--variant-flat mb-4" role="alert">
  <!----><span class="v-alert__underlay"></span>
  <!---->
  <div class="v-alert__prepend"><i class="mdi-close-circle mdi v-icon notranslate v-theme--light" style="font-size: 28px; height: 28px; width: 28px;" aria-hidden="true" density="default"></i></div>
  <div class="v-alert__content">
    <!---->
    <!---->$server.setupAdmin is not a function
  </div>
  <!---->
  <!---->
</div>
<form class="v-form mt-2" novalidate="">
  <div class="v-input v-input--horizontal v-input--center-affix v-input--density-default v-theme--light v-locale--is-ltr v-input--dirty v-text-field">
    <!---->
    <div class="v-input__control">
      <div class="v-field v-field--active v-field--center-affix v-field--dirty v-field--variant-filled v-theme--light v-locale--is-ltr">
        <div class="v-field__overlay"></div>
        <div class="v-field__loader">
          <div class="v-progress-linear v-theme--light v-locale--is-ltr" style="top: 0px; height: 0px; --v-progress-linear-height: 2px;" role="progressbar" aria-hidden="true" aria-valuemin="0" aria-valuemax="100">
            <!---->
            <div class="v-progress-linear__background"></div>
            <div class="v-progress-linear__buffer" style="width: 0%;"></div>
            <transition-stub name="fade-transition" appear="false" persisted="false" css="true">
              <div class="v-progress-linear__indeterminate">
                <div class="v-progress-linear__indeterminate long"></div>
                <div class="v-progress-linear__indeterminate short"></div>
              </div>
            </transition-stub>
            <!---->
          </div>
        </div>
        <!---->
        <div class="v-field__field" data-no-activator=""><label class="v-label v-field-label v-field-label--floating" aria-hidden="true" for="input-0">
            <!---->Email
          </label><label class="v-label v-field-label" for="input-0">
            <!---->Email
          </label>
          <!----><input size="1" type="email" id="input-0" aria-describedby="input-0-messages" required="" autocomplete="email" class="v-field__input" value="a@b.com">
          <!---->
        </div>
        <!---->
        <!---->
        <div class="v-field__outline">
          <!---->
          <!---->
        </div>
      </div>
    </div>
    <!---->
    <div id="input-0-messages" class="v-input__details" role="alert" aria-live="polite">
      <transition-group-stub name="slide-y-transition" tag="div" appear="false" persisted="false" css="true" class="v-messages">
        <!---->
      </transition-group-stub>
      <!---->
    </div>
  </div>
  <div class="v-input v-input--horizontal v-input--center-affix v-input--density-default v-theme--light v-locale--is-ltr v-input--dirty v-text-field mb-4 mt-1">
    <!---->
    <div class="v-input__control">
      <div class="v-field v-field--active v-field--center-affix v-field--dirty v-field--variant-filled v-theme--light v-locale--is-ltr">
        <div class="v-field__overlay"></div>
        <div class="v-field__loader">
          <div class="v-progress-linear v-theme--light v-locale--is-ltr" style="top: 0px; height: 0px; --v-progress-linear-height: 2px;" role="progressbar" aria-hidden="true" aria-valuemin="0" aria-valuemax="100">
            <!---->
            <div class="v-progress-linear__background"></div>
            <div class="v-progress-linear__buffer" style="width: 0%;"></div>
            <transition-stub name="fade-transition" appear="false" persisted="false" css="true">
              <div class="v-progress-linear__indeterminate">
                <div class="v-progress-linear__indeterminate long"></div>
                <div class="v-progress-linear__indeterminate short"></div>
              </div>
            </transition-stub>
            <!---->
          </div>
        </div>
        <!---->
        <div class="v-field__field" data-no-activator=""><label class="v-label v-field-label v-field-label--floating" aria-hidden="true" for="input-2">
            <!---->Password
          </label><label class="v-label v-field-label" for="input-2">
            <!---->Password
          </label>
          <!----><input size="1" type="password" id="input-2" aria-describedby="input-2-messages" required="" autocomplete="new-password" class="v-field__input" value="password123">
          <!---->
        </div>
        <!---->
        <!---->
        <div class="v-field__outline">
          <!---->
          <!---->
        </div>
      </div>
    </div>
    <!---->
    <div id="input-2-messages" class="v-input__details" role="alert" aria-live="polite">
      <transition-group-stub name="slide-y-transition" tag="div" appear="false" persisted="false" css="true" class="v-messages">
        <!---->
      </transition-group-stub>
      <!---->
    </div>
  </div><button type="submit" class="v-btn v-btn--block v-btn--elevated v-theme--light bg-primary v-btn--density-default v-btn--size-default v-btn--variant-elevated"><span class="v-btn__overlay"></span><span class="v-btn__underlay"></span>
    <!----><span class="v-btn__content" data-no-activator=""> Create User </span>
    <!---->
    <!---->
  </button>
</form>"
`;

exports[`SelfHostedSetupUser.vue > shows success UI on user creation 1`] = `
"<div class="v-alert v-theme--light bg-error v-alert--density-default v-alert--variant-flat mb-4" role="alert">
  <!----><span class="v-alert__underlay"></span>
  <!---->
  <div class="v-alert__prepend"><i class="mdi-close-circle mdi v-icon notranslate v-theme--light" style="font-size: 28px; height: 28px; width: 28px;" aria-hidden="true" density="default"></i></div>
  <div class="v-alert__content">
    <!---->
    <!---->$server.setupAdmin is not a function
  </div>
  <!---->
  <!---->
</div>
<form class="v-form mt-2" novalidate="">
  <div class="v-input v-input--horizontal v-input--center-affix v-input--density-default v-theme--light v-locale--is-ltr v-input--dirty v-text-field">
    <!---->
    <div class="v-input__control">
      <div class="v-field v-field--active v-field--center-affix v-field--dirty v-field--variant-filled v-theme--light v-locale--is-ltr">
        <div class="v-field__overlay"></div>
        <div class="v-field__loader">
          <div class="v-progress-linear v-theme--light v-locale--is-ltr" style="top: 0px; height: 0px; --v-progress-linear-height: 2px;" role="progressbar" aria-hidden="true" aria-valuemin="0" aria-valuemax="100">
            <!---->
            <div class="v-progress-linear__background"></div>
            <div class="v-progress-linear__buffer" style="width: 0%;"></div>
            <transition-stub name="fade-transition" appear="false" persisted="false" css="true">
              <div class="v-progress-linear__indeterminate">
                <div class="v-progress-linear__indeterminate long"></div>
                <div class="v-progress-linear__indeterminate short"></div>
              </div>
            </transition-stub>
            <!---->
          </div>
        </div>
        <!---->
        <div class="v-field__field" data-no-activator=""><label class="v-label v-field-label v-field-label--floating" aria-hidden="true" for="input-0">
            <!---->Email
          </label><label class="v-label v-field-label" for="input-0">
            <!---->Email
          </label>
          <!----><input size="1" type="email" id="input-0" aria-describedby="input-0-messages" required="" autocomplete="email" class="v-field__input" value="a@b.com">
          <!---->
        </div>
        <!---->
        <!---->
        <div class="v-field__outline">
          <!---->
          <!---->
        </div>
      </div>
    </div>
    <!---->
    <div id="input-0-messages" class="v-input__details" role="alert" aria-live="polite">
      <transition-group-stub name="slide-y-transition" tag="div" appear="false" persisted="false" css="true" class="v-messages">
        <!---->
      </transition-group-stub>
      <!---->
    </div>
  </div>
  <div class="v-input v-input--horizontal v-input--center-affix v-input--density-default v-theme--light v-locale--is-ltr v-input--dirty v-text-field mb-4 mt-1">
    <!---->
    <div class="v-input__control">
      <div class="v-field v-field--active v-field--center-affix v-field--dirty v-field--variant-filled v-theme--light v-locale--is-ltr">
        <div class="v-field__overlay"></div>
        <div class="v-field__loader">
          <div class="v-progress-linear v-theme--light v-locale--is-ltr" style="top: 0px; height: 0px; --v-progress-linear-height: 2px;" role="progressbar" aria-hidden="true" aria-valuemin="0" aria-valuemax="100">
            <!---->
            <div class="v-progress-linear__background"></div>
            <div class="v-progress-linear__buffer" style="width: 0%;"></div>
            <transition-stub name="fade-transition" appear="false" persisted="false" css="true">
              <div class="v-progress-linear__indeterminate">
                <div class="v-progress-linear__indeterminate long"></div>
                <div class="v-progress-linear__indeterminate short"></div>
              </div>
            </transition-stub>
            <!---->
          </div>
        </div>
        <!---->
        <div class="v-field__field" data-no-activator=""><label class="v-label v-field-label v-field-label--floating" aria-hidden="true" for="input-2">
            <!---->Password
          </label><label class="v-label v-field-label" for="input-2">
            <!---->Password
          </label>
          <!----><input size="1" type="password" id="input-2" aria-describedby="input-2-messages" required="" autocomplete="new-password" class="v-field__input" value="password123">
          <!---->
        </div>
        <!---->
        <!---->
        <div class="v-field__outline">
          <!---->
          <!---->
        </div>
      </div>
    </div>
    <!---->
    <div id="input-2-messages" class="v-input__details" role="alert" aria-live="polite">
      <transition-group-stub name="slide-y-transition" tag="div" appear="false" persisted="false" css="true" class="v-messages">
        <!---->
      </transition-group-stub>
      <!---->
    </div>
  </div><button type="submit" class="v-btn v-btn--block v-btn--elevated v-theme--light bg-primary v-btn--density-default v-btn--size-default v-btn--variant-elevated"><span class="v-btn__overlay"></span><span class="v-btn__underlay"></span>
    <!----><span class="v-btn__content" data-no-activator=""> Create User </span>
    <!---->
    <!---->
  </button>
</form>"
`;

exports[`SelfHostedSetupUser.vue > validates required fields 1`] = `
"<!--v-if-->
<form class="v-form mt-2" novalidate="">
  <div class="v-input v-input--horizontal v-input--center-affix v-input--density-default v-theme--light v-locale--is-ltr v-input--error v-text-field">
    <!---->
    <div class="v-input__control">
      <div class="v-field v-field--center-affix v-field--error v-field--variant-filled v-theme--light v-locale--is-ltr">
        <div class="v-field__overlay"></div>
        <div class="v-field__loader">
          <div class="v-progress-linear v-theme--light v-locale--is-ltr" style="top: 0px; height: 0px; --v-progress-linear-height: 2px;" role="progressbar" aria-hidden="true" aria-valuemin="0" aria-valuemax="100">
            <!---->
            <div class="v-progress-linear__background bg-error"></div>
            <div class="v-progress-linear__buffer bg-error" style="width: 0%;"></div>
            <transition-stub name="fade-transition" appear="false" persisted="false" css="true">
              <div class="v-progress-linear__indeterminate">
                <div class="v-progress-linear__indeterminate long bg-error"></div>
                <div class="v-progress-linear__indeterminate short bg-error"></div>
              </div>
            </transition-stub>
            <!---->
          </div>
        </div>
        <!---->
        <div class="v-field__field" data-no-activator=""><label class="v-label v-field-label v-field-label--floating" aria-hidden="true" for="input-0">
            <!---->Email
          </label><label class="v-label v-field-label" for="input-0">
            <!---->Email
          </label>
          <!----><input size="1" type="email" id="input-0" aria-describedby="input-0-messages" required="" autocomplete="email" class="v-field__input" value="">
          <!---->
        </div>
        <!---->
        <!---->
        <div class="v-field__outline">
          <!---->
          <!---->
        </div>
      </div>
    </div>
    <!---->
    <div id="input-0-messages" class="v-input__details" role="alert" aria-live="polite">
      <transition-group-stub name="slide-y-transition" tag="div" appear="false" persisted="false" css="true" class="v-messages">
        <div class="v-messages__message">Email is required</div>
      </transition-group-stub>
      <!---->
    </div>
  </div>
  <div class="v-input v-input--horizontal v-input--center-affix v-input--density-default v-theme--light v-locale--is-ltr v-text-field mb-4 mt-1">
    <!---->
    <div class="v-input__control">
      <div class="v-field v-field--center-affix v-field--variant-filled v-theme--light v-locale--is-ltr">
        <div class="v-field__overlay"></div>
        <div class="v-field__loader">
          <div class="v-progress-linear v-theme--light v-locale--is-ltr" style="top: 0px; height: 0px; --v-progress-linear-height: 2px;" role="progressbar" aria-hidden="true" aria-valuemin="0" aria-valuemax="100">
            <!---->
            <div class="v-progress-linear__background"></div>
            <div class="v-progress-linear__buffer" style="width: 0%;"></div>
            <transition-stub name="fade-transition" appear="false" persisted="false" css="true">
              <div class="v-progress-linear__indeterminate">
                <div class="v-progress-linear__indeterminate long"></div>
                <div class="v-progress-linear__indeterminate short"></div>
              </div>
            </transition-stub>
            <!---->
          </div>
        </div>
        <!---->
        <div class="v-field__field" data-no-activator=""><label class="v-label v-field-label v-field-label--floating" aria-hidden="true" for="input-2">
            <!---->Password
          </label><label class="v-label v-field-label" for="input-2">
            <!---->Password
          </label>
          <!----><input size="1" type="password" id="input-2" aria-describedby="input-2-messages" required="" autocomplete="new-password" class="v-field__input" value="">
          <!---->
        </div>
        <!---->
        <!---->
        <div class="v-field__outline">
          <!---->
          <!---->
        </div>
      </div>
    </div>
    <!---->
    <div id="input-2-messages" class="v-input__details" role="alert" aria-live="polite">
      <transition-group-stub name="slide-y-transition" tag="div" appear="false" persisted="false" css="true" class="v-messages">
        <!---->
      </transition-group-stub>
      <!---->
    </div>
  </div><button type="submit" class="v-btn v-btn--block v-btn--disabled v-theme--light bg-primary v-btn--density-default v-btn--size-default v-btn--variant-elevated" disabled=""><span class="v-btn__overlay"></span><span class="v-btn__underlay"></span>
    <!----><span class="v-btn__content" data-no-activator=""> Create User </span>
    <!---->
    <!---->
  </button>
</form>"
`;
